feat: implement Falco-Wazuh SIEM integration for container security monitoring
  - Add Falco runtime security monitoring with Modern eBPF engine
  - Configure Falco JSON output with wazuh_integration field for SIEM processing
  - Create complete ossec.conf template with Falco log monitoring configuration
  - Add custom Wazuh rules for processing Falco alerts by priority level
  - Implement single installation service with centralized agent name generation
  - Remove configuration duplication and clean up orphaned service files
  - Enable detection of sensitive file access, privilege escalation, and suspicious processes

--- a/containers/victim/Dockerfile
+++ b/containers/victim/Dockerfile
@@ -1,7 +1,6 @@
 # Base victim container using Rocky Linux 9 (RHEL-compatible)
 FROM rockylinux:9
 
-# Install only essential packages every victim needs
 RUN dnf install -y epel-release && \
     dnf update -y && \
     dnf install -y \
@@ -16,9 +15,9 @@ RUN dnf install -y epel-release && \
     procps-ng \
     openssh-clients \
     net-tools \
+    gnupg \
     && dnf clean all
 
-# Configure systemd for container use
 RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*;\
     rm -f /etc/systemd/system/*.wants/*;\
@@ -28,56 +27,54 @@ RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == system
     rm -f /lib/systemd/system/basic.target.wants/*;\
     rm -f /lib/systemd/system/anaconda.target.wants/*;
 
-# Set systemd default target to multi-user (not graphical)
 RUN systemctl set-default multi-user.target
 
-# Enable essential services including user sessions (removes /run/nologin)
 RUN systemctl enable rsyslog sshd systemd-user-sessions && \
     systemctl enable systemd-user-sessions.service && \
     ln -sf /usr/lib/systemd/system/systemd-user-sessions.service /etc/systemd/system/multi-user.target.wants/
 
-# Configure SSH (secure by default)
 RUN mkdir /var/run/sshd && \
     ssh-keygen -A && \
     sed -i 's/#PermitRootLogin.*/PermitRootLogin no/' /etc/ssh/sshd_config && \
     sed -i 's/#PasswordAuthentication.*/PasswordAuthentication no/' /etc/ssh/sshd_config && \
     sed -i 's/#PubkeyAuthentication.*/PubkeyAuthentication yes/' /etc/ssh/sshd_config
 
-# Create lab maintainer user with passwordless sudo
 RUN useradd -m -s /bin/bash labadmin && \
     usermod -aG wheel labadmin && \
     echo "labadmin ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/labadmin && \
     chmod 440 /etc/sudoers.d/labadmin
 
-# Create .ssh directory for lab maintainer
 RUN mkdir -p /home/labadmin/.ssh && \
     chmod 700 /home/labadmin/.ssh && \
     chown -R labadmin:labadmin /home/labadmin/.ssh
 
-# Create directories for scripts and configs
 RUN mkdir -p /opt/purple-team/scripts /etc/rsyslog.d
 
-# Copy entrypoint script
 COPY entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-# Copy Wazuh install script
 COPY install-wazuh.sh /opt/purple-team/scripts/
 RUN chmod +x /opt/purple-team/scripts/install-wazuh.sh
 
+COPY install-falco.sh /opt/purple-team/scripts/
+RUN chmod +x /opt/purple-team/scripts/install-falco.sh
 
-# Copy and enable Wazuh install service
-COPY wazuh-install.service /etc/systemd/system/
-RUN systemctl enable wazuh-install.service
+COPY install-all.sh /opt/purple-team/scripts/
+RUN chmod +x /opt/purple-team/scripts/install-all.sh
+
+COPY ossec.conf.template /opt/purple-team/scripts/
+
+RUN mkdir -p /etc/falco/config.d
+COPY falco_custom.yaml /etc/falco/config.d/
+
+COPY lab-install.service /etc/systemd/system/
+RUN systemctl enable lab-install.service
 
 # Expose only SSH and syslog
 EXPOSE 22 514
 
-# Volume for persistent data
 VOLUME ["/var/log", "/home"]
 
-# Set entrypoint
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
-# Use systemd as init
 CMD ["/usr/sbin/init"]
