--- a/config/wazuh_cluster/wazuh_manager.conf
+++ b/config/wazuh_cluster/wazuh_manager.conf
@@ -259,6 +259,9 @@
     <!-- User-defined ruleset -->
     <decoder_dir>etc/decoders</decoder_dir>
     <rule_dir>etc/rules</rule_dir>
+    
+    <!-- Falco integration rules -->
+    <rule_include>falco_rules.xml</rule_include>
   </ruleset>
 
   <rule_test>
