--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - ./config/wazuh_indexer_ssl_certs/wazuh.manager.pem:/etc/ssl/filebeat.pem
       - ./config/wazuh_indexer_ssl_certs/wazuh.manager-key.pem:/etc/ssl/filebeat.key
       - ./config/wazuh_cluster/wazuh_manager.conf:/wazuh-config-mount/etc/ossec.conf
+      - ./config/wazuh_cluster/falco_rules.xml:/var/ossec/etc/rules/falco_rules.xml
     networks:
       aptl-network:
         ipv4_address: 172.20.0.10
@@ -163,6 +164,7 @@ services:
     cap_add:
       - NET_RAW      # For packet capture tools
       - NET_ADMIN    # For network manipulation tools
+
 
 networks:
   aptl-network:
