--- a/containers/base/Dockerfile.ubuntu
+++ b/containers/base/Dockerfile.ubuntu
@@ -1,11 +1,8 @@
-# Reverse engineering container built on shared Ubuntu 22.04 base
-# Build context must be ./containers/ so both base/ and reverse/ are accessible
+# Shared base image for Ubuntu 22.04 APTL containers
 FROM ubuntu:22.04
 
 # Prevent interactive prompts during package installation
 ENV DEBIAN_FRONTEND=noninteractive
-
-# ---- Shared base layer (from containers/base/Dockerfile.ubuntu) ----
 
 RUN apt-get update && \
     apt-get install -y \
@@ -25,6 +22,7 @@ RUN apt-get update && \
     ca-certificates \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Trim systemd for container usage
 RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*;\
     rm -f /etc/systemd/system/*.wants/*;\
@@ -40,12 +38,14 @@ RUN systemctl enable rsyslog ssh systemd-user-sessions && \
     systemctl enable systemd-user-sessions.service && \
     ln -sf /usr/lib/systemd/system/systemd-user-sessions.service /etc/systemd/system/multi-user.target.wants/
 
+# Configure SSH
 RUN mkdir /var/run/sshd && \
     ssh-keygen -A && \
     sed -i 's/#PermitRootLogin.*/PermitRootLogin no/' /etc/ssh/sshd_config && \
     sed -i 's/#PasswordAuthentication.*/PasswordAuthentication no/' /etc/ssh/sshd_config && \
     sed -i 's/#PubkeyAuthentication.*/PubkeyAuthentication yes/' /etc/ssh/sshd_config
 
+# Create labadmin user
 RUN useradd -m -s /bin/bash labadmin && \
     usermod -aG sudo labadmin && \
     echo "labadmin ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/labadmin && \
@@ -66,30 +66,8 @@ COPY base/scripts/ossec.conf.template /opt/purple-team/scripts/
 RUN mkdir -p /etc/falco/config.d
 COPY base/falco_custom.yaml /etc/falco/config.d/
 
-# ---- Reverse-specific layer ----
-
-COPY reverse/entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
-COPY reverse/install-wazuh.sh /opt/purple-team/scripts/
-RUN chmod +x /opt/purple-team/scripts/install-wazuh.sh
-
-COPY reverse/install-falco.sh /opt/purple-team/scripts/
-RUN chmod +x /opt/purple-team/scripts/install-falco.sh
-
-COPY reverse/install-all.sh /opt/purple-team/scripts/
-RUN chmod +x /opt/purple-team/scripts/install-all.sh
-
-COPY reverse/setup-reverse-tools.sh /opt/purple-team/scripts/
-RUN chmod +x /opt/purple-team/scripts/setup-reverse-tools.sh
-
-COPY reverse/reverse-tools-install.service /etc/systemd/system/
-RUN systemctl enable reverse-tools-install.service
-
 EXPOSE 22 514
 
 VOLUME ["/var/log", "/home"]
-
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
 CMD ["/usr/sbin/init"]
